--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -4,6 +4,12 @@ on:
   pull_request:
     types: [labeled]
     
+    
+env:
+  DOCKER_IMAGE_NAME: jalcantara90-azure-ttt
+  IMAGE_REGISTRY_URL: docker.pkg.github.com
+  AZURE_WEBAPP_NAME: pcghverificationdev
+    
 jobs:
   build:
     runs-on: ubuntu-latest
